new articles Jul-2

--- a/_config.yml
+++ b/_config.yml
@@ -100,6 +100,9 @@ friends: [
         title: "WY",
         href: "http://zhengwuyang.com"
     },{
+        title: "MKyong",
+        href: "https://mkyong.com/"
+    },{
         title: "简书·HY",
         href: "http://www.jianshu.com/u/d710132d0869"
     },{
