change to English version of 'about' page

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Elon的橡树园
-SEOTitle: Elon的博客 | 知秋一叶
+title: Elon's oak park
+SEOTitle: Elon's Blog | Elon的博客 | 知秋一叶
 header-img: img/accompany-desk.jpg
 email: hangyang1212{at}gmail.com
 description: "Even though I walk through the darkest valley, I will fear no evil, for you are with me."
